<resources>
    <string name="app_name">Appancito</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Elmejor">El mejor pan tradicional</string>
    <string name="Login">Login</string>
    <string name="Usuario">Correo</string>
    <string name="Contra">Contraseña</string>
    <string name="Registrarse">Registrarse</string>
    <string name="OlvidarContra">¿Olvidaste la contraseña?</string>
    <string name="Entrar">Entrar</string>
    <string name="Registro">Registro</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Telefono">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="RecuperarContra">Recuperar Contraseña</string>
    <string name="NumeroTele">Ingresa tu correo electronico</string>
    <string name="Enviar">Enviar</string>
    <string name="Principal">Principal</string>
    <string name="Verpedidos">Ver Pedidos</string>
    <string name="Contacto">Contacto</string>
    <string name="Ayuda">Ayuda</string>
    <string name="RealizarPP">Realizar Pedido Para Hoy</string>
    <string name="RealizarPG">Realizar Pedido </string>
    <string name="AyudaIngresar">Te ayuda a ingresar al inicio</string>
    <string name="ConfirmarPedido">Confirmas tu pedido</string>
    <string name="SolicitarPedido">Solicitas un pedido</string>
    <string name="DatosEntrega">Agregas los datos de entrega</string>
    <string name="MedioPago">Apartado donde encontraras el medio de pago</string>
    <string name="Clave">Aqui encontraras la clave interbancaria a la cual vas a depositar</string>
    <string name="SubirFoto">Apartado donde subirás la foto donde se muestre que ha realizado el deposito</string>
    <string name="Ubicacion">Muestra una imagen donde se encuentra ubicada nuestra panaderia</string>
    <string name="AyudaPanadero">Te ayudare a poder navegar por la aplicación</string>
    <string name="FormaPago">Forma de Pago</string>
    <string name="UstedPaga">Usted Paga: </string>
    <string name="clave">Clave hacer la transferencia</string>
    <string name="cuenta">xxxxxxxxxxxxxxx</string>
    <string name="adjuntarFoto">Adjuntar imagen del deposito</string>
    <string name="Datosentrega">Datos de Entrega</string>
    <string name="FechaEntrega">Fecha de entrega</string>
    <string name="FechaEntregados">Fecha de entrega (DD-MM-AAAA)</string>
    <string name="HoraEntrega">Hora de Entrega</string>
    <string name="Continuar">Continuar</string>
    <string name="ConfirmatuPedido">Confirmar pedido</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="SolicitarP">Solicitar mi Pedido</string>
    <string name="PedidoPequenio">Pedido Para Hoy</string>
    <string name="Pedidos">Pedidos</string>
    <string name="Mas">+</string>
    <string name="Menos">-</string>
    <string name="Facebook">Appancito Panaderia</string>
    <string name="Correo">Appancito@gmail.com</string>
    <string name="NumTelefono">01 800 9283 8280</string>
    <string name="UbicacionLocal">Lorenzo Boturini 269, Cuauhtemoc, 06820 Ciudad de Mexico</string>
    <string name="cerrarsesion">Presiona el icono para cerrar sesion</string>
    <string name="title_activity_contacto2">Map</string>
    <string name="title_activity_mapa">Map</string>
    <string name="mapa">Ir al Mapa</string>
    <string name="fecha">Fecha</string>
    <string name="Guardar">Guardar Imagen</string>
    <string name="subir">Subir Imagen</string>
    <string name="seim">Seleccionar Imagen</string>
    <string name="bolillo">Bolillos</string>
    <string name="conchas">Conchas</string>
    <string name="cuernos">Cuernos</string>
    <string name="orejas">Orejas</string>
    <string name="Total">Total</string>
    <string name="TotalA">Total a Pagar</string>
    <string name="Sel">Por favor selecciona primero la imagen y despues da click en guardar </string>

</resources>
