<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <RelativeLayout
        android:id="@+id/Conte"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/ColorFondo">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:onClick="Regresar"
            app:srcCompat="@mipmap/regresar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Registro"
            android:textSize="30sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="175dp"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="554dp"
        android:background="@color/ColorFondo"
        app:srcCompat="@mipmap/registro" />

    <TextView
        android:id="@+id/textUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="477dp"
        android:text="@string/Nombre"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="103dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textApellido"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="112dp"
        android:text="@string/Apellido"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="103dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="112dp"
        android:text="@string/Contraseña"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextContra"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="103dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="112dp"
        android:text="@string/Telefono"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="103dp"
        android:inputType="number" />

    <Button
        android:id="@+id/BotonRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="686dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="95dp"
        android:backgroundTint="@color/ColorFondo"
        android:text="@string/Registrarse" />


</RelativeLayout>