<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DEntrega">

    <RelativeLayout
        android:id="@+id/Conte"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/ColorFondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            app:srcCompat="@mipmap/regresar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="74dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="13dp"
            android:text="@string/Datosentrega"
            android:textAlignment="center"
            android:textSize="24sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageViewc"
        android:layout_width="237dp"
        android:layout_height="197dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Conte"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@mipmap/entrega" />


    <TextView
        android:id="@+id/fechaentrega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/FechaEntregados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewc"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/fechaa"
        android:layout_width="217dp"
        android:layout_height="41dp"
        android:layout_marginTop="132dp"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewc" />

    <TextView
        android:id="@+id/he"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HoraEntrega"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaa"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <EditText
        android:id="@+id/TxtNombreDatosEntregaa"
        android:layout_width="315dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <Button
        android:id="@+id/btnContinuarr"
        android:layout_width="128dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/ColorFondo"

        android:text="@string/Continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <Spinner
        android:id="@+id/SpinnerEntrega"
        android:layout_width="319dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

</androidx.constraintlayout.widget.ConstraintLayout>